--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
                   <ul class="navigation">
                       <li><a href="{{ path('index') }}">Home</a></li>
                       <li><a href="{{ path('about') }}">About</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="{{ path('contact') }}">Contact</a></li>
                   </ul>
               </nav>
           {% endblock %}
