--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -12,4 +12,12 @@
             <p>{{ blog.blog }}</p>
         </div>
     </article>
+    <section class="comments" id="comments">
+        <section class="previous-comments">
+            <h3>Comments</h3>
+            {% include 'blog/comments/index.html.twig' with { 'comments': comments } %}
+        </section>
+        <h3>Add Comment</h3>
+        {{ render(controller('App\\Controller\\CommentController:new', { 'blog_id': blog.id })) }}
+    </section>
 {% endblock %}
